--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - db
     image: wordpress:latest
     volumes:
-      - ./:/var/www/html
+      - ./wp-content/:/var/www/html/wp-content
+      - ./:/var/www/html/.htaccess
     ports:
       - "8000:80"
     environment:
