--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,7 @@ services:
       - db
     image: wordpress:latest
     volumes:
-      - ./wp-content/:/var/www/html/wp-content
-      - ./:/var/www/html/.htaccess
+      - ./:/var/www/html/
     ports:
       - "8000:80"
     environment:
