--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,39 @@
 version: "3.9"
     
-services:
-  db:
-    image: mysql:5.7
+services:    
+  wordpress:
+    image: wordpress:latest
+    environment:
+      DATABASE_URL: mysql://root:root@db:3306/wordpress
+      DB_PREFIX: ymeyrt
+    ports:
+      - '10080:80'
     volumes:
-      - .docker/data/:/var/lib/mysql
-    restart: always
+      - ./:/var/www/html/
+    depends_on:
+      - db
+    networks:
+      marwin:
+        ipv4_address: 10.3.0.3
+
+  db:
+    image: mariadb:10.3
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-    
-  wordpress:
-    depends_on:
-      - db
-    image: wordpress:latest
-    volumes:
-      - ./:/var/www/html/
+      TZ: Europe/Bratislava
     ports:
-      - "8000:80"
-    environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
+      - '10036:3306'
+    networks:
+      marwin:
+        ipv4_address: 10.3.0.4
+    volumes:
+      - .docker/data/mysql:/var/lib/mysql:delegated
+
+networks:
+  marwin:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.3.0.0/16
+          gateway: 10.3.0.1
